contrast bug fix? index

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -204,7 +204,7 @@ p.game_over_text {
         color:orange;
         width: 85vw;
         text-align:left;
-        font-size: 1.5rem;   
+        font-size: 1.8rem;   
     }
 
     #playGame{
